yoshimi 1.4.1 M

2016-10-8 Will
* Direct vector access almost complete.
* Updated docs.


2016-10-7 Will
* Small corrections to GUI.
* More work on direct Vector access.
* Updated docs.

2016-10-4 Will
* Started implementing direct access to Vectors.

2016-9-28 Will
* Added more info to /dev_notes and /doc.
* Added three new instruments to "Companion"
* No code changes.

2016-9-26 Will
* Bugfix: AddSynth Mod Amp Env enable now works.
* Applied Jespers batch to make scripts bash/dash compatible.
* Corrected and updated docs.

2016-9-25 Will
* Temporarily reverted actual splash screen to original.

2016-9-24 Will
* Merged splash updates from Jesper.

2016-9-23 Will
* Removed duplicate enable Freq Filter command.
* Bugfix: All AddSynth osc commands were going to the modulator.
* Upgraded and tested build instructions.
* Updated docs.

2016-9-22 Will
* Bugfix: direct access SubSynth Freq Env En was quite wrong :(
* Updated docs.

2016-9-21 Will
* Implemented direct access for AddSynth (not fully tested).
* Setting direct access type bit 0 now only echos byte stream.
* Updated docs.

2016-9-19 Will
* TEMPORARY fix: pad apply parameters wasn't working headless.
  Should probably use a list, not single integer.

2016-9-18 Will
* Implemented Oscillator direct access.
* Updated and corrected docs.
* Small correction to Resonance.
* Minor code optimisations.

2016-9-17 Will
* CLI now strips trailing spaces.
* Implemented PadSynth direct access base controls.
* Updated docs.
* Implemented Resonance direct access.

2016-9-15 Will
* Bugfix: direct access wasn't updating SubSynth overtones.
* Replaced HTML version of control numbers with text version.
* Bugfix: GUI wasn't sending kit number on envelope freemode.
* Optimised some direct access code.

2016-9-11 Will
* Further updates to docs
* New HTML copy of "Yoshimi Control Numbers".
* No code changes.

2016-9-10 Will
* Completed direct access envelope free mode. Oh what fun :(