@@ -1,4 +1,4 @@
-This is not intented to be used withing the realtime threads as both push and pop use mutex. However, they are very fast so you'd probably get away with it :)
+This is not intended to be used within the realtime threads as both push and pop use mutex. However, they are very fast so you'd probably get away with it :)
 
 There are just two calls:
 
@@ -8,6 +8,6 @@ string miscMsgPop( int )
 
 These calls are accessible to all parts of Yoshimi and provide a simple asynchonous means of passing text between threads and functions via just the integer ID.
 
-Pushing a message will return the first availalbe ID and Poping a message makes its ID available again.
+Pushing a message will return the first available ID and Popping a message makes its ID available again.
 
-There is a maximum of 254 possible entries at any one time, but it's unlikely that limit will ever be reached.
+There is a maximum of 256 possible entries at any one time, but it's unlikely that limit will ever be reached.
