@@ -24,6 +24,21 @@
 
 #include "Misc/SynthEngine.h"
 
+union CommandBlock{
+    struct{
+        float value;
+        unsigned char type;
+        unsigned char control;
+        unsigned char part;
+        unsigned char kit;
+        unsigned char engine;
+        unsigned char insert;
+        unsigned char parameter;
+        unsigned char par2;
+    } data;
+    unsigned char bytes [sizeof(data)];
+};
+
 void collect_data(SynthEngine *synth, float value, unsigned char type, unsigned char control, unsigned char part, unsigned char kititem = 0xff, unsigned char engine = 0xff, unsigned char insert = 0xff, unsigned char parameter = 0xff, unsigned char par2 = 0xff);
 
 void read_updates();
